# interva

./: .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-package.yml
interva/: __version__.py  interva5.py  utils.py
interva/data/: causetext.py  va_who_v1_5_3.csv
src/interva/: interva5.py
tests/: test_compare_r.py  test_interva5.py  test_utils.py
