[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "interva"
version = "1.0.0"
authors = [
    {name = "Sherry Zhao", email = "zhao.3248@buckeyemail.osu.edu"},
    {name = "Jason Thomas", email = "jarathomas@gmail.com"},
]
maintainers = [
    {name = "openVA Team", email = "help@openva.net"},
]
description = "Python implementation of the InterVA Algorithm."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["verbal autopsy",]
license = {text = "GPLv3"}
classifiers=[
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
]
dependencies = [
        "pandas",
        "numpy",
	"vacheck>=0.0.3",
	"xlrd",
]

[project.urls]
"Homepage" = "https://github.com/verbal-autopsy-software/interva"
"Bug Tracker" = "https://github.com/verbal-autopsy-software/interva/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"interva.data" = ["*.csv"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    ]

